--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="button_motion_first_text">Motion Scene Example 1</string>
 
     <string name="button_motion_second_text">Motion Scene Example 2</string>
+
+    <string name="button_custom_attribute_first_text">Custom Attribute Example 1</string>
+
+    <string name="button_custom_attribute_second_text">Custom Attribute Example 2</string>
+
+    <string name="button_key_frames_first_text">KeyFrames Example 1</string>
+
 </resources>
